# multipars

./: Cargo.toml  LICENSE  README.md  shell.nix
benches/: bgv.rs  low_gear.rs  main.rs
examples/: connection.rs  low_gear.rs
params/: phi337_mod_t86.json  phi43691_mod_t135.json  phi43691_mod_t233.json
scripts/: benchmark.sh
src/: bi_channel.rs  buffered_preproc.rs  connection.rs  interface.rs  lib.rs  oneshot_map.rs  util.rs  zero_preproc.rs
src/bgv/: fourier.rs  generic_uint.rs  mod.rs  tweaked_interpolation_packing.rs
src/bgv/params/: mod.rs  phi179_mod_p163.rs  phi179_mod_t64.rs  phi21851_mod_p188.rs  phi21851_mod_p316.rs  phi21851_mod_p444.rs  phi21851_mod_t128.rs  phi21851_mod_t192.rs  phi21851_mod_t64.rs  phi337_mod_p259.rs  phi337_mod_t86.rs  phi43691_mod_p387.rs  phi43691_mod_p616.rs  phi43691_mod_p744.rs  phi43691_mod_t135.rs  phi43691_mod_t233.rs  phi43691_mod_t297.rs
src/bgv/poly/: crt.rs  mod.rs  power.rs
src/bgv/residue/: mod.rs  native.rs  vec.rs
src/bgv/zkpopk/: mod.rs  prover.rs  verifier.rs
src/low_gear_dealer/: mod.rs  params.rs
src/low_gear_preproc/: mod.rs  params.rs  truncer.rs
src/mac_check_opener/: mod.rs
